# RecruitIQ-AI

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  pyproject.toml  rank.py  readme.md  requirements.txt  submission_metadata.yaml
configs/: company_mapping.yaml  jd_profile.yaml  rules.yaml  skill_aliases.yaml  title_mapping.yaml  weights.yaml
data/: job_description.docx  sample_submission.csv  team_xxx.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/candidate/: CandidateCard.jsx  CandidateDrawer.jsx  ScoreBreakdown.jsx  Timeline.jsx  VerdictStamp.jsx
frontend/src/components/landing/: Features.jsx  Footer.jsx  Hero.jsx  SplashScreen.jsx
frontend/src/components/shared/: MetricCard.jsx  NoticeChart.jsx  ScoreChart.jsx  StepTabs.jsx  WeightSlider.jsx
frontend/src/components/wizard/: CandidatePool.jsx  JdIntake.jsx  ResultsDashboard.jsx
frontend/src/lib/: api.js  format.js
frontend/src/pages/: Landing.jsx  Wizard.jsx
frontend/src/styles/: app.css  tokens.css
scripts/: precompute.py
src/: __init__.py  api.py  data_cleaning.py  disqualifier_rules.py  feature_engineering.py  honeypot_rules.py  jd_parser.py  reasoning.py  retrieval.py  scoring.py
tests/: test_disqualifier_rules.py  test_honeypot_rules.py  test_jd_parser.py
