[project]
name = "recruitiq-ai"
version = "0.1.0"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "rapidfuzz>=3.0.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.2",
    "pytest>=7.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6"
]

[tool.vercel]
entrypoint = "src.api:app"
